Project: Fixed site not auto-generating on config changes

--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+    "scripts": {
+        "serve": "watchy --watch '_config.yml' -- bundle exec jekyll serve"
+    },
     "dependencies": {
         "watchy": "*"
     }
