--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ plugins:
 
 minima:
   skin: auto
+  date_format: "%F"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
