Replaced the link emoji with an octicon

--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ github_username:  jekyll
 remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
+  - jekyll-octicons
   - jekyll-remote-theme
 
 minima:
