--- a/_config.yml
+++ b/_config.yml
@@ -35,30 +35,21 @@ plugins:
     - jekyll-feed
     - jekyll-octicons
     - jekyll-remote-theme
-
 minima:
     skin: auto
     date_format: "%F"
-
 kramdown:
     smart_quotes: apos,apos,quot,quot
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+    - .jekyll-cache/
+    - .sass-cache/
+    - node_modules/
+    - vendor/bundle/
+    - vendor/cache/
+    - vendor/gems/
+    - vendor/ruby/
+    - Gemfile
+    - Gemfile.lock
+    - package-lock.json
+    - package.json
+    - README.md
