--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ plugins:
 minima:
     skin: auto
     date_format: "%F"
+    social_links:
+        - platform: github
+          user_url: https://github.com/revolter/ostiipaiacu.ro
 kramdown:
     smart_quotes: apos,apos,quot,quot
 exclude:
