--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,13 @@ plugins:
     - jekyll-feed
     - jekyll-octicons
     - jekyll-remote-theme
+feed:
+    path: /feeds/feed.xml
+    tags:
+        path: /feeds/
+        only:
+            - SFW
+            - NSFW
 minima:
     skin: auto
     date_format: "%F"
