--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -28,7 +28,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
-        run: bundle exec jekyll build --trace --baseurl '${{ steps.pages.outputs.base_path }}'
+        run: bundle exec jekyll build --verbose --trace --baseurl '${{ steps.pages.outputs.base_path }}'
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
