Project: Excluded the LICENSE.md file from processing

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ minima:
 kramdown:
     smart_quotes: apos,apos,quot,quot
 exclude:
+    - LICENSE.md
     - package-lock.json
     - package.json
     - README.md
