--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,14 @@
 title: O știi p-aia cu?
 url: https://ostiipaiacu.ro
 
+# Disabled due to https://github.com/rubygems/rubygems/issues/7652
+# theme: minima
+# Added due to https://github.com/rubygems/rubygems/issues/7652
 remote_theme: jekyll/minima
 plugins:
     - jekyll-feed
     - jekyll-octicons
+    # Added due to https://github.com/rubygems/rubygems/issues/7652
     - jekyll-remote-theme
 exclude:
     - LICENSE.md
