Project: Marked the watchy package as a dev dependency

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "serve": "watchy --watch '_config.yml' --watch '_plugins/*.rb' -- bundle exec jekyll serve --trace"
     },
-    "dependencies": {
+    "devDependencies": {
         "watchy": "*"
     }
 }
