Added Open Graph image

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,10 @@ exclude:
     - README.md
 defaults:
     - scope:
+          path: ""
+      values:
+          image: /assets/favicon/android-chrome-512x512.png
+    - scope:
           path: ''
           type: posts
       values:
