--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,5 @@ minima:
     social_links:
         - platform: github
           user_url: https://github.com/revolter/ostiipaiacu.ro
+sass:
+    style: compressed
