Project: Added cli-real-favicon package version 0.0.9

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "serve": "watchy --watch '_config.yml' --watch '_plugins/*.rb' -- bundle exec jekyll serve --trace --baseurl '/ostiipaiacu.ro'"
     },
     "devDependencies": {
+        "cli-real-favicon": "*",
         "watchy": "*"
     }
 }
